--- a/public/index.html
+++ b/public/index.html
@@ -5,88 +5,151 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swift Warsaw</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100italic,100,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <span class="name">Swift<b>Warsaw</b></span>
-        <nav>
-          <a href="#" class="selected">Home</a>
-          <a href="#about">About</a>
-          <a href="#when">When</a>
-          <a href="#where">Where</a>
-          <a href="#what">What</a>
-          <a href="#who">Who</a>
-          <a href="#contact">Contact</a>
-          <a href="#" class="white small button">Join</a>
-        </nav>
-        <div class="clear"></div>
-        <h1>Meetup in Warsaw for Swift Lovers</h1>
-        <h3>Next In:</h3>
-        <div class="counter">
-          <div class="days">
-            <strong>8</strong>
-            Days
-          </div>
-          <div class="hours">
-            <strong>25</strong>
-            Hours
-          </div>
-          <div class="minutes">
-            <strong>56</strong>
-            Minutes
-          </div>
-          <div class="seconds">
-            <strong>20</strong>
-            Seconds
+    <div id="fakebackground">
+      <header>
+        <div>
+          <span class="name">Swift<b>Warsaw</b></span>
+          <nav>
+            <a href="#" class="selected">Home</a>
+            <a href="#about">About</a>
+            <a href="#when">When</a>
+            <a href="#where">Where</a>
+            <a href="#what">What</a>
+            <a href="#who">Who</a>
+            <a href="#contact">Contact</a>
+            <a href="#" class="white small button">Join</a>
+          </nav>
+          <div class="clear"></div>
+          <h1>Meetup in Warsaw for Swift Lovers</h1>
+          <h3>Next In:</h3>
+          <div class="counter">
+            <div class="days">
+              <strong>8</strong>
+              Days
+            </div>
+            <div class="hours">
+              <strong>25</strong>
+              Hours
+            </div>
+            <div class="minutes">
+              <strong>56</strong>
+              Minutes
+            </div>
+            <div class="seconds">
+              <strong>20</strong>
+              Seconds
+            </div>
           </div>
         </div>
+      </header>
+      
+      <div class="gray background">
+        <section id="about">
+          <div class="half">
+          <h2>Why?</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+            </p>
+          </div>
+          <div class="half">
+          <h2>For whom?</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+            </p>
+          </div>
+          <span class="clear"></span>
+        </section>
       </div>
-    </header>
 
-    <section id="about">
-      <div class="half">
-      <h2>Why?</h2>
+      <section id="when">
+        <h2>Next Meeting</h2>
+        <h2 class="black">Swift Warsaw <strong>#3</strong></h2>
+        <div class="half">
+          <span class="date to right">Thursday 21.10.2014, 7PM</span>
+        </div>
+        <div class="half">
+          <span class="location to left">Macoscope, Cegłowska 29</span>
+        </div>
+        <div class="clear">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </p>
-      </div>
-      <div class="half">
-      <h2>For whom?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        </p>
-      </div>
-      <span class="clear"></span>
-    </section>
 
-    <section id="when">
-      <h2>Next Meeting</h2>
-      <h2 class="black">Swift Warsaw <strong>#3</strong></h2>
-      <div class="half">
-        <span class="date to right">Thursday 21.10.2014, 7PM</span>
-      </div>
-      <div class="half">
-        <span class="location to left">Macoscope, Cegłowska 29</span>
-      </div>
-      <div class="clear">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      </p>
+        <div class="half">
+          <a class="orange button to right">Facebook Event</a>
+        </div>
+        <div class="half">
+          <a class="orange button to left">Meetup Event</a>
+        </div>
+        <span class="clear"></span>
+      </section>
 
-      <div class="half">
-        <a class="orange button to right">Facebook Event</a>
-      </div>
-      <div class="half">
-        <a class="orange button to left">Meetup Event</a>
-      </div>
-      <span class="clear"></span>
-    </section>
+      <section id="where">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2440.730252444133!2d20.95349200000001!3d52.284599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecbd3ccec6fb1%3A0xbc7b2641186a73f4!2sCeg%C5%82owska+29%2C+Warszawa%2C+Poland!5e0!3m2!1sen!2s!4v1406489320825" width="100%" height="350px" frameborder="0" style="border:0"></iframe>
+      </section>
 
-    <section id="where">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2440.730252444133!2d20.95349200000001!3d52.284599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecbd3ccec6fb1%3A0xbc7b2641186a73f4!2sCeg%C5%82owska+29%2C+Warszawa%2C+Poland!5e0!3m2!1sen!2s!4v1406489320825" width="100%" height="350px" frameborder="0" style="border:0"></iframe>
-    </section>
+      <div class="gray background">
+        <section id="who">
+          <h2>Speakers</h2>
+          <div class="speaker">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="speaker">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="speaker">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <span class="clear"></span>
+        </section>
+      </div>
+      <section id="what">
+      </section>
+
+
+      <div class="grey background">
+        <section id="creators">
+
+        </section>
+      </div>
+
+      <footer>
+          <h2>Questions?</h2>
+          <h4>Feel free to write to us at <a href="mailto:hello@swiftwarsaw.com">hello@swiftwarsaw.com</a></h4>
+          <h2>Follow Us</h2>
+          <span>Design created with love by <a href="http://sixbox.es">sixbox.es</a>
+      </footer>
+    </div>
+
+    <section id="fakefooter"></section>
 
     <script src="js/app.js"></script>
   </body>
