Added creators section

--- a/public/index.html
+++ b/public/index.html
@@ -134,10 +134,65 @@
       <section id="what">
       </section>
 
+      <section id="what">
+        <h2>Agenda</h2>
 
-      <div class="grey background">
+      </section>
+
+      <div class="gray background">
         <section id="creators">
-
+          <h2>Creators</h2>
+          <div class="creator">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="creator">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="creator">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="creator">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="creator">
+            <img src="img/taylor.jpg"/>
+            <span class="name">Taylor Swift</span>
+            <div class="links">
+              <a href="#" class="fa-github"></a>
+              <a href="#" class="fa-facebook"></a>
+              <a href="#" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <span class="clear"></span>
         </section>
       </div>
 
