--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,13 @@
           <h2>Questions?</h2>
           <h4>Feel free to write to us at <a href="mailto:hello@swiftwarsaw.com">hello@swiftwarsaw.com</a></h4>
           <h2>Follow Us</h2>
+          <div class="links">
+              <a href="#" class="fa fa-github"></a>
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-google-plus"></a>
+              <span class="clear"></span>
+          </div>
           <span>Design created with love by <a href="http://sixbox.es">sixbox.es</a>
       </footer>
     </div>
