Added mobile version

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         <div class="half">
           <span class="location to left">Macoscope, Cegłowska 29</span>
         </div>
-        <div class="clear">
+        <div class="clear"></div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </p>
@@ -194,7 +194,7 @@
         </section>
       </div>
 
-      <footer>
+      <footer id="contact">
           <h2>Questions?</h2>
           <h4>Feel free to write to us at <a href="mailto:hello@swiftwarsaw.com">hello@swiftwarsaw.com</a></h4>
           <h2>Follow Us</h2>
