--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,22 @@
         </div>
       </header>
       
+      <div class="active sticky">
+        <div>
+          <span class="name">Swift<b>Warsaw</b></span>
+          <a href="#" class="hamburger fa fa-align-justify"></a>
+          <nav>
+            <a href="#" class="selected">Home</a>
+            <a href="#about">About</a>
+            <a href="#when">When</a>
+            <a href="#where">Where</a>
+            <a href="#what">What</a>
+            <a href="#who">Who</a>
+            <a href="#contact">Contact</a>
+          </nav>
+        </div>
+      </div>
+      
       <div class="gray background">
         <section id="about">
           <div class="half">
@@ -210,7 +226,7 @@
     </div>
 
     <section id="fakefooter"></section>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
