--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,18 @@
   </head>
   <body>
     <div id="fakebackground">
-      <header>
+      <header id="home">
         <div>
           <span class="name">Swift<b>Warsaw</b></span>
           <nav>
-            <a href="#" class="selected">Home</a>
+            <a href="#home" class="selected">Home</a>
             <a href="#about">About</a>
             <a href="#when">When</a>
             <a href="#where">Where</a>
-            <a href="#what">What</a>
             <a href="#who">Who</a>
+            <a href="#what">What</a>
             <a href="#contact">Contact</a>
-            <a href="#" class="white small button">Join</a>
+            <a href="#when" class="white small button">Join</a>
           </nav>
           <div class="clear"></div>
           <h1>Meetup in Warsaw for Swift Lovers</h1>
@@ -47,17 +47,17 @@
         </div>
       </header>
       
-      <div class="active sticky">
+      <div class="sticky">
         <div>
           <span class="name">Swift<b>Warsaw</b></span>
           <a href="#" class="hamburger fa fa-align-justify"></a>
           <nav>
-            <a href="#" class="selected">Home</a>
+            <a href="#home" class="selected">Home</a>
             <a href="#about">About</a>
             <a href="#when">When</a>
             <a href="#where">Where</a>
-            <a href="#what">What</a>
             <a href="#who">Who</a>
+            <a href="#what">What</a>
             <a href="#contact">Contact</a>
           </nav>
         </div>
@@ -150,7 +150,45 @@
 
       <section id="what">
         <h2>Agenda</h2>
-
+        <div class="agenda">
+          <div class="item">
+            <img src="img/taylor.jpg"/>
+            <span class="time">19:00</span>
+            <span class="name">Taylor Swift</span>
+            <span class="title">Lorem Ipsum</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/taylor.jpg"/>
+            <span class="time">19:00</span>
+            <span class="name">Taylor Swift</span>
+            <span class="title">Lorem Ipsum</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/taylor.jpg"/>
+            <span class="time">19:00</span>
+            <span class="name">Taylor Swift</span>
+            <span class="title">Lorem Ipsum</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="item">
+            <img src="img/taylor.jpg"/>
+            <span class="time">19:00</span>
+            <span class="name">Taylor Swift</span>
+            <span class="title">Lorem Ipsum</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="clear"></div>
       </section>
 
       <div class="gray background">
@@ -210,7 +248,7 @@
         </section>
       </div>
 
-      <footer id="contact">
+      <footer>
           <h2>Questions?</h2>
           <h4>Feel free to write to us at <a href="mailto:hello@swiftwarsaw.com">hello@swiftwarsaw.com</a></h4>
           <h2>Follow Us</h2>
@@ -225,8 +263,9 @@
       </footer>
     </div>
 
-    <section id="fakefooter"></section>
+    <section  id="contact" class="fakefooter"></section>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/jquery.nav.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
