--- a/public/index.html
+++ b/public/index.html
@@ -96,10 +96,10 @@
         </p>
 
         <div class="half">
-          <a class="orange button to right">Facebook Event</a>
+          <a class="orange button to left">Facebook Event</a>
         </div>
         <div class="half">
-          <a class="orange button to left">Meetup Event</a>
+          <a class="orange button to right">Meetup Event</a>
         </div>
         <span class="clear"></span>
       </section>
