content, shameless plug

--- a/public/index.html
+++ b/public/index.html
@@ -68,13 +68,15 @@
           <div class="half">
           <h2>Why?</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Quite simply - because it was a meetup <em>we</em> wanted to attend to. We're all enthusiasts of developing on Apple platforms and we wanted a space where we could
+                discuss recent developments with fellow-minded developers. 
             </p>
           </div>
           <div class="half">
           <h2>For whom?</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                For <strong>everyone</strong>! We aim to cover wide range of topics - from basic, introductionary talks to more technical ones that delve into the nitty-gritty details. 
+                If you're interested in Swift in any shape or form - you're invited to join us! You may also be interested in our <a href="https://github.com/SwiftWarsaw/SwiftWarsaw/blob/master/guide.md">guide</a>.
             </p>
           </div>
           <span class="clear"></span>
@@ -83,16 +85,16 @@
 
       <section id="when">
         <h2>Next Meeting</h2>
-        <h2 class="black">Swift Warsaw <strong>#3</strong></h2>
+        <h2 class="black">Swift Warsaw <strong>#4</strong></h2>
         <div class="half">
-          <span class="date to right">Thursday 21.10.2014, 7PM</span>
+          <span class="date to right">Thursday 27.11.2014, 7PM</span>
         </div>
         <div class="half">
           <span class="location to left">Macoscope, Cegłowska 29</span>
         </div>
         <div class="clear"></div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            We're working hard to make sure our November event will be the best one yet - but it'll still have to remain under the wraps for a while. We'll be sure to keep you posted about latest developments - in the meantime, feel free to join our Facebook and Meetup events!
         </p>
 
         <div class="half">
@@ -235,12 +237,12 @@
             </div>
           </div>
           <div class="creator">
-            <img src="img/taylor.jpg"/>
-            <span class="name">Taylor Swift</span>
+            <img src="http://s.gravatar.com/avatar/fb75be7e6907d88b6f293eff2d43422b?s=240"/>
+            <span class="name">Jan Klausa</span>
             <div class="links">
-              <a href="#" class="fa-github"></a>
-              <a href="#" class="fa-facebook"></a>
-              <a href="#" class="fa-twitter"></a>
+              <a href="https://github.com/jklausa" class="fa-github"></a>
+              <a href="https://facebook.com/klausaa" class="fa-facebook"></a>
+              <a href="https://twitter.com/klausa_qwpx" class="fa-twitter"></a>
               <span class="clear"></span>
             </div>
           </div>
@@ -253,10 +255,9 @@
           <h4>Feel free to write to us at <a href="mailto:hello@swiftwarsaw.com">hello@swiftwarsaw.com</a></h4>
           <h2>Follow Us</h2>
           <div class="links">
-              <a href="#" class="fa fa-github"></a>
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-google-plus"></a>
+              <a href="https://github.com/SwiftWarsaw/SwiftWarsaw" class="fa fa-github"></a>
+              <a href="https://www.facebook.com/swiftwarsaw" class="fa fa-facebook"></a>
+              <a href="https://twitter.com/SwiftWarsaw" class="fa fa-twitter"></a>
               <span class="clear"></span>
           </div>
           <span>Design created with love by <a href="http://sixbox.es">sixbox.es</a>
