--- a/public/index.html
+++ b/public/index.html
@@ -227,22 +227,22 @@
             </div>
           </div>
           <div class="creator">
-            <img src="img/taylor.jpg"/>
-            <span class="name">Taylor Swift</span>
-            <div class="links">
-              <a href="#" class="fa-github"></a>
-              <a href="#" class="fa-facebook"></a>
-              <a href="#" class="fa-twitter"></a>
-              <span class="clear"></span>
-            </div>
-          </div>
-          <div class="creator">
             <img src="http://s.gravatar.com/avatar/fb75be7e6907d88b6f293eff2d43422b?s=240"/>
             <span class="name">Jan Klausa</span>
             <div class="links">
               <a href="https://github.com/jklausa" class="fa-github"></a>
               <a href="https://facebook.com/klausaa" class="fa-facebook"></a>
               <a href="https://twitter.com/klausa_qwpx" class="fa-twitter"></a>
+              <span class="clear"></span>
+            </div>
+          </div>
+          <div class="creator">
+            <img src="http://s.gravatar.com/avatar/24a9c02d8fb9ded1019ad86f0fe3a36a?s=240"/>
+            <span class="name">Maciej Konieczny</span>
+            <div class="links">
+              <a href="http://narf.pl/" class="fa-link"></a>
+              <a href="https://github.com/narfdotpl" class="fa-github"></a>
+              <a href="https://twitter.com/narfdotpl" class="fa-twitter"></a>
               <span class="clear"></span>
             </div>
           </div>
