Update index.html for correct grammar & lexis

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
           <div class="half">
           <h2>For whom?</h2>
             <p>
-                For <strong>everyone</strong>! We aim to cover wide range of topics - from basic, introductionary talks to more technical ones that delve into the nitty-gritty details.
-                If you're interested in Swift in any shape or form - you're invited to join us! You may also be interested in our <a href="https://github.com/SwiftWarsaw/SwiftWarsaw/blob/master/guide.md">guide</a>.
+                For <strong>everyone</strong>! We aim to cover a wide range of topics - from basic, introductory talks to more technical ones that delve into the nitty-gritty details.
+                If you're interested in Swift in any shape or form - you're invited to join us! You may also want to take a look at <a href="https://github.com/SwiftWarsaw/SwiftWarsaw/blob/master/guide.md">guide</a>.
             </p>
           </div>
           <span class="clear"></span>
@@ -116,7 +116,7 @@
           <div class="speaker">
             <img src="img/taylor.jpg"/>
             <span class="name">Taylor Swift</span>
-            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <span class="description">DevOps Specialist who also happens to be a pop star.</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
@@ -127,7 +127,7 @@
           <div class="speaker">
             <img src="img/taylor.jpg"/>
             <span class="name">Taylor Swift</span>
-            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <span class="description">DevOps Specialist who also happens to be a pop star.</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
@@ -138,7 +138,7 @@
           <div class="speaker">
             <img src="img/taylor.jpg"/>
             <span class="name">Taylor Swift</span>
-            <span class="description">DevOps Specialist who also happen to be a pop star.</span>
+            <span class="description">DevOps Specialist who also happens to be a pop star.</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
