Several layout fixes

--- a/public/index.html
+++ b/public/index.html
@@ -149,10 +149,9 @@
           <span class="clear"></span>
         </section>
       </div>
-
       <section id="what">
-        <h2>Agenda</h2>
         <div class="agenda">
+          <h2>Agenda</h2>
           <div class="item">
             <img src="img/taylor.jpg"/>
             <span class="time">19:00</span>
@@ -198,7 +197,7 @@
           <h2>Creators</h2>
           <div class="creator">
             <img src="img/taylor.jpg"/>
-            <span class="name">Taylor Swift</span>
+            <span class="name">Łukasz Kluczborski</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
@@ -208,7 +207,7 @@
           </div>
           <div class="creator">
             <img src="img/taylor.jpg"/>
-            <span class="name">Taylor Swift</span>
+            <span class="name">Maciej Sienkiewicz</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
@@ -218,7 +217,7 @@
           </div>
           <div class="creator">
             <img src="img/taylor.jpg"/>
-            <span class="name">Taylor Swift</span>
+            <span class="name">Wojciech Czekalski</span>
             <div class="links">
               <a href="#" class="fa-github"></a>
               <a href="#" class="fa-facebook"></a>
@@ -228,7 +227,7 @@
           </div>
           <div class="creator">
             <img src="http://s.gravatar.com/avatar/fb75be7e6907d88b6f293eff2d43422b?s=240"/>
-            <span class="name">Jan Klausa</span>
+            <span class="name">Jan<br/> Klausa</span>
             <div class="links">
               <a href="https://github.com/jklausa" class="fa-github"></a>
               <a href="https://facebook.com/klausaa" class="fa-facebook"></a>
