Added Łukasz Kuczborski profile

--- a/public/index.html
+++ b/public/index.html
@@ -196,12 +196,12 @@
         <section id="creators">
           <h2>Creators</h2>
           <div class="creator">
-            <img src="img/taylor.jpg"/>
-            <span class="name">Łukasz Kluczborski</span>
+            <img src="http://s.gravatar.com/avatar/6f0f1219141aae273a0ae85c01c1d27b?s=240"/>
+            <span class="name">Łukasz Kuczborski</span>
             <div class="links">
-              <a href="#" class="fa-github"></a>
-              <a href="#" class="fa-facebook"></a>
-              <a href="#" class="fa-twitter"></a>
+              <a href="https://github.com/lkuczborski" class="fa-github"></a>
+              <a href="https://facebook.com/lkuczborski" class="fa-facebook"></a>
+              <a href="https://twitter.com/lkuczborski" class="fa-twitter"></a>
               <span class="clear"></span>
             </div>
           </div>
