--- a/public/index.html
+++ b/public/index.html
@@ -216,12 +216,12 @@
             </div>
           </div>
           <div class="creator">
-            <img src="img/taylor.jpg"/>
-            <span class="name">Wojciech Czekalski</span>
+            <img src="http://en.gravatar.com/userimage/35389809/129ca70290da9240a762375a32fd3822.jpg?size=300"/>
+            <span class="name">Wojtek Czekalski</span>
             <div class="links">
-              <a href="#" class="fa-github"></a>
-              <a href="#" class="fa-facebook"></a>
-              <a href="#" class="fa-twitter"></a>
+              <a href="http://wczekalski.com/" class="fa-link"></a>
+              <a href="https://github.com/wczekalski" class="fa-github"></a>
+              <a href="https://twitter.com/wczekalski" class="fa-twitter"></a>
               <span class="clear"></span>
             </div>
           </div>
